# tp-2020-1c-Recursantes-3.0

./: .gitignore  README.md  build_librerias.sh
Broker/: CMakeLists.txt  broker.c  broker.cfg  broker.h  build_broker.sh  cliente-test.c  debug_build.sh  rainbow.py  tests.sh
Broker/configs/: buddy.cfg  compactacion.cfg  consolidacion.cfg
Gameboy/: CMakeLists.txt  build_gameboy.sh  gameboy.c  gameboy.h  gameboy_config  structures.h
Gamecard/: CMakeLists.txt  build_gamecard.sh  funciones_aux.c  funciones_aux.h  gamecard.c  gamecard.config  gamecard.h  structures.h  tallGrass.c  tallGrass.h
Team/: CMakeLists.txt  build_team.sh  servidor_simulacion.c  servidor_simulacion.h  team.c  team.config  team.h  teamStructures.h
Team/Servidor_simulacion/: CMakeLists.txt  servidor_simulacion.c  servidor_simulacion.h
cliente-test/: CMakeLists.txt  cliente-test  cliente-test.c  cliente-test.h
commLib/: CMakeLists.txt  README.md  build_biblioteca.sh  connections.c  connections.h  structures.h
